--- a/css/style.css
+++ b/css/style.css
@@ -1158,7 +1158,9 @@ footer {
 
 @media (width < 425px) {
     .image__small_screen img:nth-child(2) {
+        position: absolute;
         margin-top: -15px;
+        width: 50px;
     }
 }
 
