--- a/css/responsive_more_details.css
+++ b/css/responsive_more_details.css
@@ -64,3 +64,8 @@
         width: 350px;
     }
 }
+@media (max-width : 361px) {
+    .right__col .house_more_img img {
+        height: 70%;
+    }
+}
