--- a/css/responsive_more_details.css
+++ b/css/responsive_more_details.css
@@ -66,7 +66,7 @@
 }
 @media (max-width : 365px) {
     .right__col .house_more_img img {
-        max-width: 100%;
+        min-width: 100%;
         height: 105px;
     }
     .map__container iframe {
